--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
     }
 
     window.onload = function () {
-      openGameAndRedirect('https://fivestarontop.pages.dev/', 'https://springbranchisd.instructure.com/');
+      openGameAndRedirect('https://www.pear-games.us/Pear-Launcher.html', 'https://springbranchisd.instructure.com/');
     };
   </script>
 </head>
 <body>
   <div class="card">
-    <h1>Selenite Launcher</h1>
-    <h2>Click the button below to launch Selenite</h2>
+    <h1>Pear Launcher</h1>
+    <h2>Click the button below to launch Pear</h2>
     <h3>!! Different URL !!</h3>
     <div class="button-group">
-      <button class="action-button" onclick="openGameAndRedirect('https://fivestarontop.pages.dev/', 'https://springbranchisd.instructure.com/')">
-        Selenite Embedder
+      <button class="action-button" onclick="openGameAndRedirect('https://www.pear-games.us/Pear-Launcher.html', 'https://springbranchisd.instructure.com/')">
+        Pear Launcher (soon to be Avocado Launcher)
       </button>
       <button class="action-button download-button" onclick="downloadPage()">
         Useless button (idk why this is still here I cant delete it)
